# slurm

./: README.rst  configure.ac
slurm/: slurm.h.in  slurm_errno.h
src/api/: init_msg.c
src/common/: slurm_protocol_defs.c  slurm_protocol_pack.c
src/plugins/sched/: Makefile.am
src/sbatch/: opt.c  opt.h  sbatch.c
src/slurmctld/: Makefile.am  job_mgr.c  job_scheduler.c  slurmctld.h
